tests/compile-fail/suzu_from_location_cross_attr.stderr
error: `from` and `location` cannot be used on the same field
 --> tests/compile-fail/suzu_from_location_cross_attr.rs:6:5
  |
6 |     #[suzu(from)]
  |     ^

error: `location` defined here
 --> tests/compile-fail/suzu_from_location_cross_attr.rs:7:5
  |
7 |     #[suzu(location)]
  |     ^
